--- a/src/App.css
+++ b/src/App.css
@@ -14,46 +14,47 @@ body {
 }
 
 .app-wrapper {
-      text-align: center;
+    width:  calc(260vw - 165vw);
+    text-align: center;
     color: #ecf0f1;
-
 }
 
 .app-title {
     font-family: 'Roboto Mono', monospace;
+    font-size: 18px;
+    font-weight: bolder;
     margin-bottom: 20px;
-    font-size: 14px;
     color: #7a7787;
     width:100%;
 }
 
 .password-container {
     background-color: #24232b;
-    padding: 20px;
+    padding: 15px 20px;
     margin-bottom: 20px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
-
-
 
 .pass-display {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 20px;
-    background-color: #ffffff;
-    padding: 15px;
-    border: 1px solid #bdc3c7;
+    height: 36px;
 }
 
-.pass-display input[type="text"] {
-    flex: 1;
-    padding: 10px;
-    font-size: 16px;
-    border: none;
-    border-radius: 4px;
-    background-color: transparent;
-    color: #34495e;
+#pass {
+    font-size: 26px;
+    font-weight: bolder;
+    color: #525159;
+}
+
+.file-copy {
+    color: #a4ffaf;
+    cursor: pointer;
+}
+
+.file-copy:hover {
+    color: #fff;
 }
 
 .main-container {
@@ -69,6 +70,7 @@ body {
 .options label {
     display: flex;
     align-items: center;
+    gap: 20px;
     margin-bottom: 10px;
     font-size: 14px;
     color: #fff;
@@ -76,9 +78,6 @@ body {
 }
 
 .options input[type="checkbox"]{
-    
-
-    margin-right: 10px;
     appearance: none;
     width: 16px;
     height: 16px;
@@ -120,14 +119,24 @@ body {
     align-items: center;
     margin-bottom: 20px;
     text-transform: uppercase;
+    font-weight: bolder;
     font-family: 'JetBrains Mono';
     background-color: #18171f;
-    padding: 10px 20px;
-    
+    padding: 15px 20px;
+}
+
+#strength-qual {
+    display: none;
 }
 
 .pass-strength span {
     color: #7a7787;
+    font-size: 14px;
+}
+
+.strength-indicator-container {
+    display: flex;
+    gap: 10px;
 }
 
 .strength-indicator {
@@ -150,23 +159,27 @@ body {
 }
 
 .strength-indicator .strength-1 {
-    background-color: #e74c3c;
+    background-color: #f1c40f;
+    border: 1px solid #f1c40f;
 }
 
 .strength-indicator .strength-2 {
-    background-color: #f39c12;
+    background-color: #f1c40f;
+    border: 1px solid #f1c40f;
 }
 
 .strength-indicator .strength-3 {
     background-color: #f1c40f;
+    border: 1px solid #f1c40f;
 }
 
 .strength-indicator .strength-4 {
-    background-color: #2ecc71;
+    background-color: #f1c40f;
+    border: 1px solid #f1c40f;
 }
 
 .gen-button {
-    padding: 10px 20px;
+    padding: 15px 20px;
     font-size: 16px;
     font-family: 'JetBrains Mono';
     color: #ffffff;
@@ -179,16 +192,33 @@ body {
     text-transform: uppercase;
 }
 
+.button-content {
+    color: #0e0d13;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 33%;
+    padding-right: 33%;
+}
+
+.arrow-forward {
+    font-size: 100%;
+}
+
 .gen-button:hover {
     background-color:transparent;
-    color: #ffffff;
 }
+
+.gen-button:hover .button-content {
+    color: #a4ffaf;
+}
+
 /* Estilização do input range */
 input[type="range"] {
     -webkit-appearance: none;
     width: 100%;
     height: 8px;
-    background: #d3d3d3;
+    background: #18171f;
     outline: none;
     opacity: 0.7;
     transition: opacity .15s ease-in-out;
@@ -258,7 +288,6 @@ input[type="range"]::-moz-range-track {
     width: 100%;
     height: 8px;
     cursor: pointer;
-    background: #a4ffaf;
 }
 
 input[type="range"]::-ms-track {
@@ -272,7 +301,6 @@ input[type="range"]::-ms-track {
 
 .title-password-length{
     width:50%;
-    font-size:8px;
 }
 
 .length{
@@ -289,7 +317,7 @@ input[type="range"]::-ms-track {
     margin: 0; /* Remove a margem inferior */
 }
 .title-password-length label{
-    font-size:12px;
+    font-size: 14px;
     width:auto;
 }
 
@@ -298,4 +326,19 @@ input[type="range"]::-ms-track {
     justify-content: space-between;
     align-items: center;
     margin-bottom: 10px;
+}
+
+
+/* Mobile */
+@media (max-width: 768px) {
+    .app-wrapper {
+        max-width: 350px;
+    }
+}
+
+/* Desktop */
+@media (min-width: 769px) {
+    .app-wrapper {
+        max-width:  400px;
+    }
 }
