--- a/src/App.css
+++ b/src/App.css
@@ -1,344 +1,162 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+/* App.css */
 
 body {
-    font-family: 'Roboto Mono', monospace;
-    background-color: #0e0d13;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+  font-family: 'Poppins', sans-serif;
+  background-color: hsl(0, 0%, 94%);
+  color: hsl(0, 0%, 8%);
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
 }
 
-.app-wrapper {
-    width:  calc(260vw - 165vw);
-    text-align: center;
-    color: #ecf0f1;
+.App {
+  background-color: hsl(0, 0%, 100%);
+  border-radius: 0px;
+  position:center;
+  height: 400px;
+  width: 100%;
+  box-sizing: border-box;
+  display: grid;
+  grid-template-areas: 
+    "input-area input-area input-area"
+    "calculate-button calculate-button calculate-button"
+    "display-area display-area display-area";
+  gap: 0rem;
+}
+.form-control{
+  float:left;
+  display:flex;
+  flex-direction: column;
+  
+  gap: 0.5rem;
+
+}
+.input-area {
+  grid-area: input-area;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1rem;
 }
 
-.app-title {
-    font-family: 'Roboto Mono', monospace;
-    font-size: 18px;
-    font-weight: bolder;
-    margin-bottom: 20px;
-    color: #7a7787;
-    width:100%;
+.input-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.password-container {
-    background-color: #24232b;
-    padding: 15px 20px;
-    margin-bottom: 20px;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+.form-control input {
+  width: 150px;
+  padding: 0.5rem;
+  font-size: 20px;
+  font-weight: bolder;
+  text-align: center;
+  border: 0px solid hsl(0, 0%, 86%);
+  font-family: 'Poppins', sans-serif;
+  font-weight:bolder;
+  border-radius: 0px;
+  box-sizing: border-box;
+  margin-right: 30px;
+  margin-bottom: 0px;;
 }
 
-.pass-display {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 36px;
+input:focus {
+  outline: none;
+  border-color: hsl(259, 100%, 65%);
 }
 
-#pass {
-    font-size: 26px;
-    font-weight: bolder;
-    color: #525159;
+.input-title{
+  position:relative;
+  display:flex;
 }
 
-.file-copy {
-    color: #a4ffaf;
-    cursor: pointer;
+label {
+  font-family:'Poppins', sans-serif ;
+  position:relative;
+  font-size: 9.5px;
+  font-weight:800;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  color: hsl(0, 1%, 44%);
+  margin-bottom:0px;
+  margin-left:40px;
 }
 
-.file-copy:hover {
-    color: #fff;
+.calculate-button {
+  grid-area: calculate-button;
+  display: flex;
+  width:80px;
+  margin-left:520px;
+  justify-content: center;
+  margin-bottom: 0rem;
 }
 
-.main-container {
-    background-color: #24232b;
-    padding: 20px;
-    color: #fff;
+.calculate-button img{
+  width:30px;
 }
 
-.options {
-    margin-bottom: 20px;
+button {
+  width: 60px;
+  height: 60px;
+  display: flex;
+  position:relative;
+  justify-content: center;
+  align-items: center;
+  font-size: 32px;
+  background-color: hsl(259, 100%, 65%);
+  color: hsl(0, 0%, 100%);
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
 }
 
-.options label {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-    margin-bottom: 10px;
-    font-size: 14px;
-    color: #fff;
-    position: relative;
+button:hover {
+  background-color: hsl(259, 100%, 60%);
 }
 
-.options input[type="checkbox"]{
-    appearance: none;
-    width: 16px;
-    height: 16px;
-    border: 1px solid white;
-    border-radius: 0px;
-    background-color: transparent;
-    cursor: pointer;
-    position: relative;
+button:active {
+  background-color: hsl(259, 100%, 55%);
 }
 
-.options input[type="checkbox"]:checked{
-    background-color: #a4ffaf;
-    border: 1px solid #a4ffaf;
+.display-area {
+  grid-area: display-area;
+  text-align: left;
 }
 
-.options input[type="checkbox"]::after {
-    content: '✔︎'; 
-    color: #0e0d13;
-    font-size: 14px;
-    position: absolute;
-    top: 0;
-    left: 2px;
-    display: none;
+.result {
+  display: flex;
+  flex-direction: column;
+  position:relative;
+  justify-content: flex-start;
+  align-items: flex-start;
+  font-size: 65px;
+  font-style:italic;
+  line-height: 1.2;
+  font-weight:bolder;
+  margin-top: 0rem;
+}
+.result-display{
+  color: hsl(259, 100%, 65%);
+  letter-spacing: 7px;
+  margin-right:10px;
 }
 
-.options input[type="checkbox"]:checked::after {
-    display: block;
+.result span {
+  font-weight: 800;
 }
 
-.options input[type="range"] {
-    width: 100%;
-    margin-top: 10px;
-    margin-bottom: 20px;
+.result-name{
+  color: black;
 }
 
-.pass-strength {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 20px;
-    text-transform: uppercase;
-    font-weight: bolder;
-    font-family: 'JetBrains Mono';
-    background-color: #18171f;
-    padding: 15px 20px;
-}
-
-#strength-qual {
-    display: none;
-}
-
-.pass-strength span {
-    color: #7a7787;
-    font-size: 14px;
-}
-
-.strength-indicator-container {
-    display: flex;
-    gap: 10px;
-}
-
-.strength-indicator {
-    display: flex;
-    align-items: center;
-    border-radius: 0px;
-}
-
-.strength-indicator div {
-    width: 10px;
-    height: 20px;
-    margin-left: 2px;
-    border-radius: 3px;
-    margin-right:5px;
-    background-color: transparent;/* Exemplo de força média */
-    border-radius: 0px;
-    border-width: 1px;
-   
-    border: 1px solid white;
-}
-
-.strength-indicator .strength-1 {
-    background-color: #f1c40f;
-    border: 1px solid #f1c40f;
-}
-
-.strength-indicator .strength-2 {
-    background-color: #f1c40f;
-    border: 1px solid #f1c40f;
-}
-
-.strength-indicator .strength-3 {
-    background-color: #f1c40f;
-    border: 1px solid #f1c40f;
-}
-
-.strength-indicator .strength-4 {
-    background-color: #f1c40f;
-    border: 1px solid #f1c40f;
-}
-
-.gen-button {
-    padding: 15px 20px;
-    font-size: 16px;
-    font-family: 'JetBrains Mono';
-    color: #ffffff;
-    background-color: #a4ffaf;
-    border: 1px solid #a4ffaf;
-    border-radius: 0px;
-    cursor: pointer;
-    width: 100%;
-    transition: background-color 0.3s, color 0.3s;
-    text-transform: uppercase;
-}
-
-.button-content {
-    color: #0e0d13;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-left: 33%;
-    padding-right: 33%;
-}
-
-.arrow-forward {
-    font-size: 100%;
-}
-
-.gen-button:hover {
-    background-color:transparent;
-}
-
-.gen-button:hover .button-content {
-    color: #a4ffaf;
-}
-
-/* Estilização do input range */
-input[type="range"] {
-    -webkit-appearance: none;
-    width: 100%;
-    height: 8px;
-    background: #18171f;
-    outline: none;
-    opacity: 0.7;
-    transition: opacity .15s ease-in-out;
-    margin-top: 15px; /* Adicionado para centralizar a barra */
-}
-
-input[type="range"]:hover {
-    opacity: 1;
-}
-
-input[type="range"]::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 20px;
-    height: 20px;
-    background: #fff; /* Cor branca quando não clicado */
-    cursor: pointer;
-    border-radius: 50%;
-    border: 2px solid #fff; /* Bordas brancas */
-    transition: background 0.3s, border 0.3s;
-    margin-top: -6px; /* Adicionado para centralizar a bolinha na barra */
-}
-
-input[type="range"]::-webkit-slider-thumb:active {
-    background: #000; /* Cor preta quando clicado */
-    border: 2px solid #a4ffaf; /* Bordas verdes */
-}
-
-input[type="range"]::-moz-range-thumb {
-    width: 20px;
-    height: 20px;
-    background: #fff; /* Cor branca quando não clicado */
-    cursor: pointer;
-    border-radius: 50%;
-    border: 2px solid #fff; /* Bordas brancas */
-    transition: background 0.3s, border 0.3s;
-}
-
-input[type="range"]::-moz-range-thumb:active {
-    background: #000; /* Cor preta quando clicado */
-    border: 2px solid #a4ffaf; /* Bordas verdes */
-}
-
-input[type="range"]::-ms-thumb {
-    width: 20px;
-    height: 20px;
-    background: #fff; /* Cor branca quando não clicado */
-    cursor: pointer;
-    border-radius: 50%;
-    border: 2px solid #fff; /* Bordas brancas */
-    transition: background 0.3s, border 0.3s;
-}
-
-input[type="range"]::-ms-thumb:active {
-    background: #000; /* Cor preta quando clicado */
-    border: 2px solid #a4ffaf; /* Bordas verdes */
-}
-
-input[type="range"]::-webkit-slider-runnable-track {
-    width: 100%;
-    height: 8px;
-    cursor: pointer;
-    background: #a4ffaf;
-}
-
-input[type="range"]::-moz-range-track {
-    width: 100%;
-    height: 8px;
-    cursor: pointer;
-}
-
-input[type="range"]::-ms-track {
-    width: 100%;
-    height: 8px;
-    cursor: pointer;
-    background: #a4ffaf;
-    border-color: transparent;
-    color: transparent;
-}
-
-.title-password-length{
-    width:50%;
-}
-
-.length{
-    margin-bottom: 10px;
-    width:10%;
-    float:right;
-}
-
-.length label{
-    color:#a4ffaf;
-    font-family: 'JetBrains Mono';
-    font-size: 27px;
-    width: auto; /* Ajuste conforme necessário */
-    margin: 0; /* Remove a margem inferior */
-}
-.title-password-length label{
-    font-size: 14px;
-    width:auto;
-}
-
-.aditional{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 10px;
-}
-
-
-/* Mobile */
-@media (max-width: 768px) {
-    .app-wrapper {
-        max-width: 350px;
-    }
-}
-
-/* Desktop */
-@media (min-width: 769px) {
-    .app-wrapper {
-        max-width:  400px;
-    }
+@media (max-width: 375px) {
+  .App {
+    padding: 1rem;
+  }
+  
+  input, button, .result {
+    font-size: 28px;
+  }
 }
