--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
-html {
-    box-sizing: border-box;
-}
+@font-face{
+    font-family: "Poppins";
+    src:local("Poppins-Regular"),
+    url('./assets/fonts/Poppins-Regular.ttf') 
+  }
